2017-09-11 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-40: Set max line-width for code-checks yaml file to 4096
	This should fix the issues like 
	https://github.com/cms-sw/cmssw/pull/20433/commits/9f57c6768c4045d2a7f6c4da672df3a7ff5c5e10#diff-616cc1e4006d02189e27f55aafb4c9a8R1446
	where an extra new line was added

2017-09-05 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-39: Cleanup the code-checks internals files when done

2017-09-05 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-37: Use gti diff TAG and git/info/sparse-checkout to find out
	actual deleted packages.

	* V05-05-38: Bug fix the code-checks yaml file fixer
	https://github.com/cms-sw/cmssw/issues/20377

2017-08-23 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-35/36: Apply clang-tidy changes to changed files only if
	USER_CODE_CHECKS_CHANGE_ONLY is set to YES otherwise included headers
	are also updated.
	USER_FILES_CHANGED_COMMAND is not supported use USER_CODE_CHECKS_FILE
	instead

2017-08-22 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-34: New build rule checkdeps add to checkout
	project packages for changed tools

2017-08-10 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-33: Bug fixed for code-checks buildrule
	  - Do not fail if no changed file found for code-checks

2017-08-09 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-31: Rename following build rules
	  apply-code-checks-on-changes -> code-checks
	  code-checks ->  code-checks-all

	* V05-05-30: Added new build rule apply-code-checks-on-changes
	to apply code-checks on changed files only using
	    git diff --name-only $CMSSW_VERSION

	* V05-05-29: update for clang-tidy/format
	 - Use .clang-tidy and .clang-format files if avauilable
	 - Rename user parameters
	   - USER_CODE_CHECK_FILES  -> USER_CODE_CHECKS_FILES
	   - USER_CODE_CHECK_FILE   -> USER_CODE_CHECKS_FILE
	   - USER_STYLE_CHECKS      -> USER_CODE_CHECKS
	   - USER_STYLE_CHECK_ARGS  -> USER_CODE_CHECKS_ARGS